--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<div>
+<div class="container-fluid">
   <% if current_user %>
     <%= link_to current_user.username, edit_user_registration_path  %>
-    <%= link_to 'Sign Out', destroy_user_session_path %>
+    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
   <% else %>
     <%= link_to 'Sign In', new_user_session_path %>
     <%= link_to 'Sign Up', new_user_registration_path %>
