--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <p class="notice container-fluid"><%= notice %></p>
-    <p class="alert container-fluid"><%= alert %></p>
+    <%= render 'layouts/alerts' %>
     <div class="container-fluid">
     <%= yield %>
     </div>
