--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,11 @@
-<div class="container-fluid">
+<nav class="navbar navbar-dark bg-dark">
+  <%= link_to 'Home', root_path, class: "navbar-brand" %>
+
   <% if current_user %>
-    <%= link_to current_user.username, edit_user_registration_path  %>
-    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+    <%= link_to current_user.username, edit_user_registration_path, class: "navbar-nav nav-item nav-link navbar-brand" %>
+    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "nav-item nav-link navbar-brand " %>
   <% else %>
-    <%= link_to 'Sign In', new_user_session_path %>
-    <%= link_to 'Sign Up', new_user_registration_path %>
+    <%= link_to 'Sign In', new_user_session_path, class: "nav-item nav-link navbar-brand" %>
+    <%= link_to 'Sign Up', new_user_registration_path, class: "nav-item nav-link navbar-brand"%>
   <% end %>
-</div>
+</nav>
