--- a/app/views/game_titles/index.html.erb
+++ b/app/views/game_titles/index.html.erb
@@ -6,17 +6,13 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @game_titles.each do |game_title| %>
       <tr>
-        <td><%= game_title.name %></td>
-        <td><%= link_to 'Show', game_title %></td>
-        <td><%= link_to 'Edit', edit_game_title_path(game_title) %></td>
-        <td><%= link_to 'Destroy', game_title, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to game_title.name, edit_game_title_path(game_title) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +20,4 @@
 
 <br>
 
-<%= link_to 'New Game Title', new_game_title_path %>
+<%= link_to 'New Game Title', new_game_title_path, class: 'btn btn-primary btn-block' %>
