--- a/app/views/game_titles/show.html.erb
+++ b/app/views/game_titles/show.html.erb
@@ -5,5 +5,5 @@
   <%= @game_title.name %>
 </p>
 
-<%= link_to 'Edit', edit_game_title_path(@game_title) %> |
-<%= link_to 'Back', game_titles_path %>
+<%= link_to 'Edit', edit_game_title_path(@game_title), class: 'btn btn-warning btn-block' %>
+<%= link_to 'Back', game_titles_path, class: 'btn btn-link btn-block' %>
